--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -77,15 +77,6 @@
   will-change: transform;
 }
 
-#features {
-  color: #241F1E;
-}
-
-.primary-color {
-  background-color: #241F1E;
-  color: white;
-}
-
 body {
   overflow-x: hidden;
   font-family: "Roboto", sans-serif;
@@ -97,7 +88,7 @@ body {
 .navbar {
   text-transform: uppercase;
   font-weight: 300;
-  font-size: .7rem;
+  font-size: .8rem;
   letter-spacing: .1rem;
   background: rgba(0, 0, 0, 0.6) !important;
 }
@@ -129,101 +120,101 @@ a.nav-link:hover {
   background-image: url("../Assets/HeroBannerImage.jpg");
 }
 
+.graylayer {
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+}
+
+.center-logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .caption {
   width: 100%;
-  height: 100%;
+  height: 50%;
   position: absolute;
-  top: 45%;
+  top: 35%;
   z-index: white;
   text-transform: uppercase;
 }
 
-.caption h1 {
-  font-size: 3.8rem;
-  font-weight: 400;
+.caption img {
   letter-spacing: .2rem;
-  text-shadow: .1rem .1rem .8rem black;
-  padding-bottom: 1rem;
+  text-shadow: .1rem .1rem .8rem #241F1E;
+  padding-bottom: 1.3rem;
 }
 
 .caption h3 {
   font-size: 2rem;
   font-weight: 300;
-  text-shadow: .1rem .1rem .5rem black;
+  -webkit-font-kerning: 50;
+          font-kerning: 50;
+  text-shadow: .1rem .1rem .5rem #241F1E;
   padding-bottom: 1.6rem;
 }
 
-.btn-lg {
-  border-width: medium;
+#banner {
+  background: #883636 !important;
+}
+
+.textbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.img-text .info-text img {
+  width: 100%;
+  height: auto;
+}
+
+.img-text .info-text h5 {
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.25);
+}
+
+.img-text .info-text p {
+  font-size: 16px;
+  margin-top: 70px;
+  font-weight: 300;
+}
+
+.img-text .info-text .textbox h2 {
+  font-size: 65;
+  font-weight: 300;
+  border-bottom: 2px solid #b4b4b4;
+}
+
+.jumbotron#jumbotron-1 {
+  background-color: #dfdfdf;
   border-radius: 0;
-  padding: .6rem 1.3rem;
-  font-size: 1.1rem;
-  font-weight: 300;
+  width: 100%;
+  height: 80vh;
 }
 
-.btn-lg {
-  --borderWidth: 5;
-  --boxShadowDepth: 8;
-  --buttonColor: rgb(255, 255, 255);
-  --fontSize: 1;
-  --horizontalPadding: 16;
-  --verticalPadding: 8;
-  background: transparent;
-  border: calc(var(--borderWidth) * 1px) solid var(--buttonColor);
-  -webkit-box-shadow: calc(var(--boxShadowDepth) * 1px) calc(var(--boxShadowDepth) * 1px) 0 #991f1f;
-          box-shadow: calc(var(--boxShadowDepth) * 1px) calc(var(--boxShadowDepth) * 1px) 0 #991f1f;
-  color: var(--buttonColor);
-  cursor: pointer;
-  font-size: calc(var(--fontSize) * 1rem);
-  font-weight: 300;
-  outline: transparent;
-  padding: calc(var(--verticalPadding) * 1px) calc(var(--horizontalPadding) * 1px);
-  -webkit-transition: -webkit-box-shadow 0.15s ease;
-  transition: -webkit-box-shadow 0.15s ease;
-  transition: box-shadow 0.15s ease;
-  transition: box-shadow 0.15s ease, -webkit-box-shadow 0.15s ease;
-}
-
-.btn-lg:hover {
-  -webkit-box-shadow: calc(var(--boxShadowDepth) / 2 * 1px) calc(var(--boxShadowDepth) / 2 * 1px) 0 #991f1f;
-          box-shadow: calc(var(--boxShadowDepth) / 2 * 1px) calc(var(--boxShadowDepth) / 2 * 1px) 0 #991f1f;
-}
-
-.btn-lg:active {
-  -webkit-box-shadow: #1a1a1a;
-          box-shadow: #1a1a1a;
-}
-
-/* JumboTron Section */
-.jumbotron {
-  background-color: #d8d8d8;
-}
-
-.center-align-text {
-  text-align: center;
-  width: 60%;
-}
-
-.team-bio-text {
-  font-weight: 400;
-}
-
-.team-bio-text-2 {
-  font-weight: 300;
-  color: rgba(255, 255, 255, 0.575);
+.jumbotron#jumbotron-2 {
+  background-color: #493f3d;
+  border-radius: 0;
 }
 
 .dark-text {
   color: #241f1e;
 }
 
-.dark-text-main {
-  color: #241f1e;
-  font-weight: 400;
+.dark-mode .textbox h2 {
+  border-bottom: 2px solid #241f1e !important;
 }
 
-.dark-text-fade {
-  color: #241f1e7c !important;
-  font-weight: 300;
+.main-text h1 {
+  font-weight: 400;
+  border-bottom: 2px solid #707070;
 }
 /*# sourceMappingURL=indexstyle.css.map */
