--- a/css/_fixed.scss
+++ b/css/_fixed.scss
@@ -18,11 +18,27 @@
   .landing {
     position: relative;
     width: 100%;
+    height: 60vh;
+    display: table;
+    z-index: -1;
+    margin-top: 5rem;
+  }
+  .img-banner{
+    position: relative;
+    width: 100%;
     height: 100vh;
     display: table;
     z-index: -1;
   }
   .home-wrap {
+    clip: rect(0, auto, auto, 0);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  #home-wrap {
     clip: rect(0, auto, auto, 0);
     position: absolute;
     top: 0;
