--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -19,12 +19,30 @@
 .landing {
   position: relative;
   width: 100%;
+  height: 60vh;
+  display: table;
+  z-index: -1;
+  margin-top: 5rem;
+}
+
+.img-banner {
+  position: relative;
+  width: 100%;
   height: 100vh;
   display: table;
   z-index: -1;
 }
 
 .home-wrap {
+  clip: rect(0, auto, auto, 0);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#home-wrap {
   clip: rect(0, auto, auto, 0);
   position: absolute;
   top: 0;
@@ -121,8 +139,12 @@ a.nav-link:hover {
 }
 
 .graylayer {
-  -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
+  background: grey;
+  color: white;
+  width: 100%;
+  height: 100%;
+  opacity: .4;
+  position: absolute;
 }
 
 .center-logo {
@@ -193,16 +215,28 @@ a.nav-link:hover {
   border-bottom: 2px solid #b4b4b4;
 }
 
-.jumbotron#jumbotron-1 {
+.jumbotron.light {
   background-color: #dfdfdf;
   border-radius: 0;
-  width: 100%;
-  height: 80vh;
+  margin: 1rem 0;
 }
 
-.jumbotron#jumbotron-2 {
-  background-color: #493f3d;
+.jumbotron.dark {
+  background-color: #241f1e;
+  color: white;
   border-radius: 0;
+  margin: 1rem 0;
+}
+
+.jumbotron.footer {
+  background-color: #141414;
+  border-radius: 0;
+  margin: 1rem 0;
+  color: white;
+}
+
+.card {
+  border-radius: 1;
 }
 
 .dark-text {
@@ -216,5 +250,21 @@ a.nav-link:hover {
 .main-text h1 {
   font-weight: 400;
   border-bottom: 2px solid #707070;
+}
+
+#banner-img {
+  background: url(../Assets/TeamImgResizepng.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#banner-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: white;
 }
 /*# sourceMappingURL=indexstyle.css.map */
