--- a/css/indexstyle.scss
+++ b/css/indexstyle.scss
@@ -55,7 +55,12 @@ a.nav-link:hover{
 }
 
 .graylayer{
-    backdrop-filter: blur(10px);
+    background: grey;
+    color: white;
+    width: 100%;
+    height: 100%;
+    opacity: .4;
+    position: absolute;
 }
 
 .center-logo{
@@ -120,16 +125,30 @@ a.nav-link:hover{
     }
 }
 
-.jumbotron#jumbotron-1{
+.jumbotron.light{
     background-color: #dfdfdf;
     border-radius: 0;
-    width: 100%;
-    height: 80vh;
+    margin: 1rem 0;
+
+    
 }
 
-.jumbotron#jumbotron-2{
-    background-color: #493f3d;
+.jumbotron.dark{
+    background-color: #241f1e;
+    color:white;
     border-radius: 0;
+    margin: 1rem 0;
+}
+
+.jumbotron.footer{
+    background-color: #141414;
+    border-radius: 0;
+    margin: 1rem 0;
+    color:white;
+}
+
+.card{
+    border-radius: 1;
 }
 
 .dark-text{
@@ -149,4 +168,19 @@ a.nav-link:hover{
         font-weight: 400;
         border-bottom: 2px solid #707070;
     }
+}
+
+#banner-img{
+    background: url(../Assets/TeamImgResizepng.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#banner-text{
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
 }
